profiles/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quadrant-vms
  labels:
    name: quadrant-vms
    app.kubernetes.io/name: quadrant-vms
    app.kubernetes.io/part-of: quadrant-vms
